iot_station_management/k8s/iot_station_management/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-station-management-deployment
  labels:
    app: iot-station-management
  namespace: smart-city-traffic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-station-management
  template:
    metadata:
      labels:
        app: iot-station-management
    spec:
      containers:
        - name: iot-station-management
          # image pushed to ECR in AWS
          image: 319282596033.dkr.ecr.us-east-1.amazonaws.com/smart_city_traffic/iot_station_management:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health
            initialDelaySeconds: 40
            periodSeconds: 20
            failureThreshold: 5
