iot_station_management/k8s/iot_station_management/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-station-management-ingress-controller
  namespace: smart-city-traffic
  annotations:
    kubernetes.io/ingress.class: kong
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /api/v1/iot(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: iot-station-management-service
                port:
                  number: 8080
